Fixed background layer being clipped by admin toolbar.

--- a/themes/custom/mdc/css/style.css
+++ b/themes/custom/mdc/css/style.css
@@ -9596,7 +9596,7 @@ sub {
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center 20px;
+  background-position: center 31px;
 }
 
 /* line 105, ../sass/_overrides.scss */
