--- a/themes/custom/mdc/sass/_overrides.scss
+++ b/themes/custom/mdc/sass/_overrides.scss
@@ -96,7 +96,7 @@ sub {
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center 20px;
+  background-position: center 31px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
